--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -7,6 +7,7 @@
 \newcommand*\Let[2]{\State #1 $\gets$ #2}
 \newcommand*\CSA{\textsc{Csa}\xspace}
 \newcommand*\CST{\textsc{Cst}\xspace}
+\newcommand*\CSTs{\textsc{Cst}s\xspace}
 \algrenewcommand\algorithmicrequire{\textbf{Precondition:}}
 \algrenewcommand\algorithmicensure{\textbf{Postcondition:}}
 
@@ -70,3 +71,9 @@
 
 %-- ALG/DS
 \newcommand{\SA}{\mbox{\emph{SA}}}
+
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "cstlm"
+%%% End: 
